--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,9 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -14,6 +17,10 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 20px;
+  margin: 10px;
+  display: flex;
+  gap: 10px;
 }
 
 a {
